# backend

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  sample.env  solidworks.py
.github/workflows/: ci.yml
SolidworksLayer/: Class1.cs
app/: database.py  main.py  oauth.py
app/core/: agent.py  ai_model.py  azure_utils.py  chat.py  config.py  llm.py  llm_chain.py  memory.py  output_parser.py  prompt.py  tools.py  whisper.py
app/database/: config.py  database.py  get_user.py  model.py  schemas.py
app/utils/: custom_pdf_loader.py  make_chain.py  pinecone_client.py  upload_data.py  upload_file.py  vector_store.py
tests/: test_main.py
