[tool.poetry]
name = "neoFacturing-backend"
version = "0.1.0"
description = ""
authors = ["Richard <richard.kruemmel@code.berlin>"]

[tool.poetry.dependencies]
python = "^3.9"
fastapi = "^0.100"
pydantic = {extras = ["dotenv"], version = "^1.10.7"}
uvicorn = "^0.22.0"
langchain = "0.0.249"
openai = "^0.27.6"
pinecone-client = "^2.2.1"
pdfplumber = "^0.9.0"
python-multipart = "^0.0.6"
tiktoken = "^0.3.3"
python-jose = "^3.3.0"
sqlalchemy = "^2.0.13"
alembic = "^1.10.4"
psycopg2 = "^2.9.6"
passlib = "^1.7.4"
authlib = "^1.2.0"
pg8000 = "^1.29.5"
azure-storage-blob = "^12.17.0"

[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
pytest-cov = "^2.10.1"
httpx = "^0.24.1"
black = "^23.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
